--- a/Android/auikit/build.gradle
+++ b/Android/auikit/build.gradle
@@ -74,7 +74,7 @@ dependencies {
 
     // Image Loading Libraries
     implementation 'com.github.bumptech.glide:glide:4.15.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
+    kapt 'com.github.bumptech.glide:compiler:4.15.0'
 
     // Ui Libraries
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
